--- a/package.json
+++ b/package.json
@@ -6,9 +6,20 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "antd": "^4.15.0",
+    "axios": "^0.18.0",
+    "bootstrap": "^4.6.0",
+    "font-awesome": "^4.7.0",
+    "joi-browser": "13.4",
+    "jwt-decode": "^2.2.0",
+    "lodash": "^4.17.10",
+    "prop-types": "^15.6.2",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "4.0.3",
+    "react-toastify": "^4.1.0",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
